-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 17, 21, 22, 23
-
Component/s: hotspot
-
b15
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8331010 | 22.0.2 | Aleksey Shipilev | P2 | Closed | Fixed | b05 |
| JDK-8342885 | 21.0.7-oracle | Thomas Schatzl | P2 | Closed | Fixed | b01 |
| JDK-8330778 | 21.0.4 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
| JDK-8331171 | 17.0.12 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
```
size_t space_left = max_capacity() - capacity();
size_t want_space = MAX2(size, EpsilonMinHeapExpand); // <---- here
if (want_space < space_left) {
// Enough space to expand in bulk:
bool expand = _virtual_space.expand_by(want_space);
assert(expand, "Should be able to expand");
} else if (size < space_left) { // <---- here
// No space to expand in bulk, and this allocation is still possible,
// take all the remaining space:
bool expand = _virtual_space.expand_by(space_left);
assert(expand, "Should be able to expand");
}
```
- backported by
-
JDK-8330778 Epsilon: 'EpsilonHeap::allocate_work' misuses the parameter 'size' as size in bytes
-
- Resolved
-
-
JDK-8331171 Epsilon: 'EpsilonHeap::allocate_work' misuses the parameter 'size' as size in bytes
-
- Resolved
-
-
JDK-8331010 Epsilon: 'EpsilonHeap::allocate_work' misuses the parameter 'size' as size in bytes
-
- Closed
-
-
JDK-8342885 Epsilon: 'EpsilonHeap::allocate_work' misuses the parameter 'size' as size in bytes
-
- Closed
-
- relates to
-
JDK-8328168 Epsilon: Premature OOM when allocating object larger than uncommitted heap size
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/bcc83cd2
-
Commit
openjdk/jdk21u-dev/515783b8
-
Commit
openjdk/jdk22u/53f758ed
-
Commit
openjdk/jdk/90ab52e5
-
Review
openjdk/jdk17u-dev/2423
-
Review
openjdk/jdk21u-dev/515
-
Review
openjdk/jdk22u/157
-
Review
openjdk/jdk/18303